--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-    background-image: notebook.jpg;
+    background-image: url(notebook.jpg);
     min-height: 100%;
 }
 
