--- a/home.html
+++ b/home.html
@@ -92,19 +92,19 @@ body, html {
   
 <div class="w3-row w3-center w3-dark-grey w3-padding-16">
   <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">14+</span><br>
+    <span class="w3-xlarge">1+</span><br>
     Partners
   </div>
   <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">55+</span><br>
-    Projects Done
+    <span class="w3-xlarge">1+</span><br>
+    Fundraisers Done
   </div>
   <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">89+</span><br>
-    Happy Clients
+    <span class="w3-xlarge">$0+</span><br>
+    Raised in Donations
   </div>
   <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">150+</span><br>
+    <span class="w3-xlarge">1+</span><br>
     Meetings
   </div>
 </div>
