--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@ body, html {
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-    background-image: url("/w3images/parallax2.jpg");
+    background-image: url(utensils.jpg);
     min-height: 400px;
 }
 
