--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@ body, html {
 
 /* Third image (Contact) */
 .bgimg-3 {
-    background-image: url("/w3images/parallax3.jpg");
+    background-image: url(writing.jpg);
     min-height: 400px;
 }
 
