--- a/home.html
+++ b/home.html
@@ -132,7 +132,7 @@ body, html {
 
 <!-- Container (Contact Section) -->
 <div class="w3-content w3-container w3-padding-64" id="contact">
-    <h3 class="w3-center">WHERE WE'RE LOCATED (This doesn't work yet)</h3>
+    <h3 class="w3-center">CONTACT US (This doesn't work yet)</h3>
 
   <div class="w3-row w3-padding-32 w3-section">
     <div class="w3-col m4 w3-container">
