--- a/home.html
+++ b/home.html
@@ -89,6 +89,32 @@ body, html {
   <p>Our student organization, called Supplies for Students (S4S), is based in Maryland and made up of over 40 students from various public high schools. When the school year begins, we plan to hold monthly meetings with all members to discuss upcoming events and distribute roles.
     As for advocacy, we created this student coalition to involve our community in providing a quality education to the next generation. We hope to accomplish this through events to raise awareness, educational presentations at schools, and fundraisers or drives. Currently, we have already planned a couple basic fundraisers involving local restaurants and bake sales to get us started. As the school year begins, we plan to expand our organization in order to host larger fundraisers and supply drives.</p>
   
+    <div class="w3-row-padding w3-grayscale">
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <img src="" alt="Miranda" style="width:100%">
+      <h3>Miranda Yu</h3>
+      <p class="w3-opacity">President & Founder</p>
+      <p>sturff aobut miranda.</p>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <img src="" alt="Sophia" style="width:100%">
+      <h3>Sophia Fang</h3>
+      <p class="w3-opacity">Vice President and Graphic Designer</p>
+      <p>stuff about me.</p>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <img src="" alt="Alyssa" style="width:100%">
+      <h3>Alyssa Cong</h3>
+      <p class="w3-opacity">Vice President</p>
+      <p>more stuff.</p>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <img src="" alt="katie" style="width:100%">
+      <h3>Katie Kolodner</h3>
+      <p class="w3-opacity">Vice President</p>
+      <p>stuff</p>
+    </div>
+  </div>
   
 <div class="w3-row w3-center w3-dark-grey w3-padding-16">
   <div class="w3-quarter w3-section">
