--- a/home.html
+++ b/home.html
@@ -97,7 +97,7 @@ body, html {
       <p>sturff aobut miranda.</p>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="sophia.jpg" alt="Sophia" style="width:100%">
+      <img src="sophia.JPG" alt="Sophia" style="width:100%">
       <h3>Sophia Fang</h3>
       <p class="w3-opacity">Vice President and Graphic Designer</p>
       <p>stuff about me.</p>
