--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@ body, html {
 }
 
 /* Create a Parallax Effect */
-.bgimg-1, .bgimg-2, .bgimg-3 {
+.bgimg-1, .bgimg-2, .bgimg-3, .bgimg-4 {
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -39,6 +39,11 @@ body, html {
     background-image: url(writing.jpg);
     min-height: 400px;
 }
+    
+.bgimg-4 {
+    background-image:url(events.jpg);
+    min-height: 400px;
+    }
 
 .w3-wide {letter-spacing: 10px;}
 .w3-hover-opacity {cursor: pointer;}
@@ -135,21 +140,28 @@ body, html {
   </div>
 </div>
 
-<!-- Second Parallax Image with Portfolio Text -->
+<!-- Mission -->
 <div class="bgimg-2 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
     <span class="w3-xxlarge w3-text-white w3-wide">MISSION</span>
   </div>
 </div>
 
-<!-- Container (Portfolio Section) -->
-<div class="w3-content w3-container w3-padding-64" id="portfolio">
+<div class="w3-content w3-container w3-padding-64" id="mission">
   <h3 class="w3-center">OUR MISSION</h3>
   <p>Our mission is to advocate for a quality education, fundraise for statewide educational initiatives, and provide adequate supplies for students. We hope that we can impact the lives of children and supply them with the necessary materials to succeed later in life. Both my fellow members and I recognize the importance of education and how more access to instructional material can increase opportunities for a student to perform better academically. </p>
  
+<!-- Events -->
+<div class="bgimg-4 w3-display-container w3-opacity-min">
+  <div class="w3-display-middle">
+     <span class="w3-xxlarge w3-text-white w3-wide">CONTACT</span>
+  </div>
+</div>
+    
+<div class="w3-content w3-container w3-padding-64" id="events">
+  <h3 class="w3-center">EVENTS</h3>
 
-
-<!-- Third Parallax Image with Portfolio Text -->
+<!-- Contact -->
 <div class="bgimg-3 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
      <span class="w3-xxlarge w3-text-white w3-wide">CONTACT</span>
